tools/pw_stubs.h

void free(void *p);
typedef int64_t off_t;
typedef int64_t time_t;
#define _(s) (s)
#define sz(a) (a), slen(a)
struct b;
 typedef struct b B;
struct p;
 typedef struct p P;
struct bstack;
struct window;
 typedef struct window W;
struct screen;
 typedef struct screen Screen;
struct bw;
 typedef struct bw BW;
struct tw;
 typedef struct tw TW;
 typedef struct menu MENU;
struct qw;
 typedef struct qw QW;
struct charmap;
typedef struct scrn SCRN;
struct screen {
	SCRN *t;
	ptrdiff_t wind;
	W *topwin;
	W *curwin;
	ptrdiff_t w, h;
};
struct window {
	LINK(W) link;
	Screen *t;
	ptrdiff_t x, y, w, h;
	ptrdiff_t ny, nh;
	ptrdiff_t reqh;
	ptrdiff_t fixed;
	ptrdiff_t hh;
	W *win;
	W *main;
	W *orgwin;
	ptrdiff_t curx, cury;
	KBD *kbd;
	const WATOM *watom;
	void *object;
	const char *msgt;
	const char *msgb;
	const char *huh;
	int *notify;
	struct bstack *bstack;
};
typedef struct options OPTIONS;
struct p {
	LINK(P) link;
	B *b;
	char _pad0[24];
	off_t byte;
	off_t line;
	off_t col;
	off_t xcol;
	int valcol;
	int end;
	char _pad1[24];
};
typedef int pid_t;
struct b {
	char _pad0[16];
	P *bof;                 /* 16 */
	P *eof;                 /* 24 */
	char *name;             /* 32 */
	char _pad1[40];         /* 40 */
	int count;              /* 80 */
	int changed;            /* 84 */
	char _pad2[104];        /* 88 */
	OPTIONS o;              /* 192 */
	P *oldcur;              /* 536 */
	P *oldtop;              /* 544 */
	P *err;                 /* 552 */
	char *current_dir;      /* 560 */
	char _pad3[4];          /* 568 → 572 */
	int rdonly;             /* 572 */
	int internal;           /* 576 */
	int scratch;            /* 580 */
	int er;                 /* 584 */
	pid_t pid;              /* 588 */
	int out;                /* 592 */
	char _pad5[4];          /* 596 → 600 */
	void *vt;               /* 600 */
	char _pad6[24];         /* 608 → 632 */
};
struct bw {
	W *parent;
	B *b;
	P *top;
	P *cursor;
	off_t offset;
	Screen *t;
	ptrdiff_t h, w, x, y;
	OPTIONS o;
	void *object;
	int lincols;
	off_t curlin;
	int top_changed;
	struct lattr_db *db;
	int shell_flag;
	int pasting;
	int last_viewmode;
	struct { int ww, ai, sp; } saved;
};
struct bstack {
	struct bstack *next;
	B *b;
	P *cursor;
	P *top;
};
struct tw {
	char *stalin;
	char *staright;
	int staon;
	char _pad_staon[4];
	off_t prevline;
	int changed;
	char _pad_changed[4];
	B *prev_b;
};
struct charmap {
	void *next;                 /* 0 */
	const char *name;           /* 8 */
	int type;                   /* 16 */
	char _pad_type[4];          /* 20 → 24 */
	int (*is_punct)(struct charmap *map, int c);   /* 24 */
	int (*is_print)(struct charmap *map, int c);   /* 32 */
	int (*is_space)(struct charmap *map, int c);   /* 40 */
	int (*is_alpha_)(struct charmap *map, int c);  /* 48 */
	int (*is_alnum_)(struct charmap *map, int c);  /* 56 */
	char _pad[2692];            /* keep rough size; only is_alnum_ needed */
};
struct recmac {
	struct recmac *next;
	int n;
	char _pad[12];
};
struct tm {
	int tm_sec;
	int tm_min;
	int tm_hour;
	int tm_mday;
	int tm_mon;
	int tm_year;
	int tm_wday;
	int tm_yday;
	int tm_isdst;
	char _pad[20];
};
char *vstrunc(char *s, ptrdiff_t len);
char *vsncpy(char *s, ptrdiff_t len, const char *blk, ptrdiff_t blklen);
char *vsfill(char *s, ptrdiff_t len, int c, ptrdiff_t amnt);
void nscrldn(SCRN *t, ptrdiff_t top, ptrdiff_t bot, ptrdiff_t amnt);
void nscrlup(SCRN *t, ptrdiff_t top, ptrdiff_t bot, ptrdiff_t amnt);
ptrdiff_t fmtlen(const char *s);
ptrdiff_t fmtpos(const char *s, ptrdiff_t goal);
void genfmt(SCRN *t, ptrdiff_t x, ptrdiff_t y, ptrdiff_t ofst, const char *s, int flg, int trunc, int atr);
void bwmove(BW *w, ptrdiff_t x, ptrdiff_t y);
void bwresz(BW *w, ptrdiff_t wi, ptrdiff_t he);
void bwins(BW *w, off_t l, off_t n, int flg);
void bwdel(BW *w, off_t l, off_t n, int flg);
void bwgen(BW *w, int linums, int linchg);
void bwgenh(BW *w);
void bwfllw(W *w);
int calclincols(BW *bw);
void prm(P *p);
off_t piscol(P *p);
void genexmsg(BW *bw, int saved, char *name);
int yncheck(const char *string, int c);
QW *mkqw(W *w, const char *prompt, ptrdiff_t len,
	int (*func)(W *w, int k, void *object, int *notify),
	int (*abrt)(W *w, void *object),
	void *object, int *notify);
time_t time(time_t *t);
struct tm *localtime(const time_t *t);
char *ctime(const time_t *t);
extern int skiptop;
extern volatile int dostaupd;
extern int leave;
extern Screen *maint;
extern B *errbuf;
extern char stdbuf[stdsiz];
extern struct charmap *locale_map;
extern struct recmac *recmac;
extern P *markb;
extern P *markk;
extern char *exmsg;
extern int have;
extern int square;
extern const char *yes_key;
int rtntw(W *w);
int utypew(W *w, int k);
int *msetI(int *dest, int c, ptrdiff_t sz);
MENU *mkmenu(W *loc, W *targ, char **s,
	int (*func)(MENU *m, ptrdiff_t cursor, void *object, int k),
	int (*abrt)(W *w, ptrdiff_t cursor, void *object),
	int (*backs)(MENU *m, ptrdiff_t cursor, void *object),
	ptrdiff_t cursor, void *object, int *notify);