src/tw.zig

pub extern fn mkqw(w: [*c]W, prompt: [*c]const u8, len: ptrdiff_t, func: ?*const fn (w: [*c]W, k: c_int, object: ?*anyopaque, notify: [*c]c_int) callconv(.c) c_int, abrt: ?*const fn (w: [*c]W, object: ?*anyopaque) callconv(.c) c_int, object: ?*anyopaque, notify: [*c]c_int) ?*QW;
pub extern fn time(t: [*c]time_t) time_t;
pub extern fn localtime(t: [*c]const time_t) [*c]struct_tm;
pub extern fn ctime(t: [*c]const time_t) [*c]u8;
pub extern var skiptop: c_int;
pub extern var dostaupd: c_int;
pub extern var leave: c_int;
pub extern var maint: [*c]Screen;
pub extern var errbuf: [*c]B;
pub extern var stdbuf: [8192]u8;
pub extern var locale_map: [*c]struct_charmap;
pub extern var recmac: [*c]struct_recmac;
pub extern var markb: [*c]P;
pub extern var markk: [*c]P;
pub extern var exmsg: [*c]u8;
pub extern var have: c_int;
pub extern var square: c_int;
pub extern var yes_key: [*c]const u8;
pub extern fn rtntw(w: [*c]W) c_int;
pub extern fn utypew(w: [*c]W, k: c_int) c_int;
pub extern fn msetI(dest: [*c]c_int, c: c_int, sz: ptrdiff_t) [*c]c_int;
pub fn movetw(arg_w: [*c]W, arg_x: ptrdiff_t, arg_y: ptrdiff_t) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var x = arg_x;
    _ = &x;
    var y = arg_y;
    _ = &y;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    var tw_2: [*c]TW = @ptrCast(@alignCast(bw_1.*.object));
    _ = &tw_2;
    if (((y != 0) or (@as(ptrdiff_t, @intFromBool(!(staen != 0))) != 0)) and (w.*.h > @as(ptrdiff_t, 1))) {
        if (!(tw_2.*.staon != 0)) {
            nscrldn(bw_1.*.parent.*.t.*.t, y, bw_1.*.parent.*.nh + y, 1);
        }
        bwmove(bw_1, x + @as(ptrdiff_t, bw_1.*.lincols), y + @as(ptrdiff_t, 1));
        tw_2.*.staon = 1;
    } else {
        if (tw_2.*.staon != 0) {
            nscrlup(bw_1.*.parent.*.t.*.t, y, bw_1.*.parent.*.nh + y, 1);
        }
        bwmove(bw_1, x + @as(ptrdiff_t, bw_1.*.lincols), y);
        tw_2.*.staon = 0;
    }
}
pub fn resizetw(arg_w: [*c]W, arg_wi: ptrdiff_t, arg_he: ptrdiff_t) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var wi = arg_wi;
    _ = &wi;
    var he = arg_he;
    _ = &he;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    if (((bw_1.*.parent.*.ny != 0) or (@as(ptrdiff_t, @intFromBool(!(staen != 0))) != 0)) and (he > @as(ptrdiff_t, 1))) {
        bwresz(bw_1, wi - @as(ptrdiff_t, bw_1.*.lincols), he - @as(ptrdiff_t, 1));
    } else {
        bwresz(bw_1, wi - @as(ptrdiff_t, bw_1.*.lincols), he);
    }
}
pub fn disptw(arg_w: [*c]W, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var flg = arg_flg;
    _ = &flg;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    var tw_2: [*c]TW = @ptrCast(@alignCast(bw_1.*.object));
    _ = &tw_2;
    var newcols: c_int = calclincols(bw_1);
    _ = &newcols;
    var linchg: c_int = 0;
    _ = &linchg;
    if ((bw_1.*.lincols != newcols) and !(have != 0)) {
        bw_1.*.lincols = newcols;
        resizetw(w, w.*.w, w.*.h);
        movetw(w, w.*.x, w.*.y);
        bwfllw(w);
        linchg = 1;
    }
    if (bw_1.*.o.hex != 0) {
        w.*.cury = @as(ptrdiff_t, @truncate((@divTrunc(bw_1.*.cursor.*.byte - bw_1.*.top.*.byte, @as(off_t, 16)) + @as(off_t, bw_1.*.y)) - @as(off_t, w.*.y)));
        w.*.curx = @as(ptrdiff_t, @truncate((@rem(bw_1.*.cursor.*.byte - bw_1.*.top.*.byte, @as(off_t, 16)) + @as(off_t, 60)) - bw_1.*.offset));
    } else {
        w.*.cury = @as(ptrdiff_t, @truncate(((bw_1.*.cursor.*.line - bw_1.*.top.*.line) + @as(off_t, bw_1.*.y)) - @as(off_t, w.*.y)));
        // Draw on a real column. `xcol` is the sticky goal for up/down; past
        // EOL it has no glyph, so sit at the end of the line (unless -picture).
        const cur_col: off_t = if (bw_1.*.o.picture != 0) bw_1.*.cursor.*.xcol else piscol(bw_1.*.cursor);
        w.*.curx = @as(ptrdiff_t, @truncate((cur_col - bw_1.*.offset) + @as(off_t, bw_1.*.lincols)));
    }
    if (((((((staupd != 0) or ((keepup != 0) and !(have != 0))) or (bw_1.*.cursor.*.line != tw_2.*.prevline)) or (bw_1.*.b.*.changed != tw_2.*.changed)) or (bw_1.*.b != tw_2.*.prev_b)) and ((w.*.y != 0) or (@as(ptrdiff_t, @intFromBool(!(staen != 0))) != 0))) and (w.*.h > @as(ptrdiff_t, 1))) {
        var fill: u8 = undefined;
        _ = &fill;
        tw_2.*.prevline = bw_1.*.cursor.*.line;
        tw_2.*.changed = bw_1.*.b.*.changed;
        tw_2.*.prev_b = bw_1.*.b;
        if (@as(c_int, bw_1.*.o.rmsg[@as(c_int, 0)]) != 0) {
            fill = bw_1.*.o.rmsg[@as(c_int, 0)];
        } else {
            fill = ' ';
        }
        tw_2.*.stalin = stagen(tw_2.*.stalin, bw_1, bw_1.*.o.lmsg, fill);
        tw_2.*.staright = stagen(tw_2.*.staright, bw_1, bw_1.*.o.rmsg, fill);
        if (fmtlen(tw_2.*.staright) < w.*.w) {
            var x: ptrdiff_t = fmtpos(tw_2.*.stalin, w.*.w - fmtlen(tw_2.*.staright));
            _ = &x;
            if (x > (if (tw_2.*.stalin != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(tw_2.*.stalin))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0))) {
                tw_2.*.stalin = vsfill(tw_2.*.stalin, if (tw_2.*.stalin != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(tw_2.*.stalin))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0), fill, x - (if (tw_2.*.stalin != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(tw_2.*.stalin))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0)));
            }
            tw_2.*.stalin = vsncpy(tw_2.*.stalin, fmtpos(tw_2.*.stalin, w.*.w - fmtlen(tw_2.*.staright)), tw_2.*.staright, if (tw_2.*.staright != null) (@as([*c]ptrdiff_t, @ptrCast(@alignCast(tw_2.*.staright))) - @as(usize, @bitCast(@as(isize, @intCast(@as(c_int, 1)))))).* else @as(ptrdiff_t, 0));
        }
        tw_2.*.stalin = vstrunc(tw_2.*.stalin, fmtpos(tw_2.*.stalin, w.*.w));
        genfmt(w.*.t.*.t, w.*.x, w.*.y, 0, tw_2.*.stalin, bg_stalin, 0, 0);
        w.*.t.*.t.*.updtab[@bitCast(@as(isize, @intCast(w.*.y)))] = 0;
    }
    if (flg != 0) {
        if (bw_1.*.o.hex != 0) {
            bwgenh(bw_1);
        } else {
            bwgen(bw_1, bw_1.*.o.linums, linchg);
        }
    }
}
pub fn iztw(arg_tw_1: [*c]TW, arg_y: ptrdiff_t) callconv(.c) void {
    var tw_1 = arg_tw_1;
    _ = &tw_1;
    var y = arg_y;
    _ = &y;
    tw_1.*.stalin = null;
    tw_1.*.staright = null;
    tw_1.*.changed = -@as(c_int, 1);
    tw_1.*.prevline = -@as(c_int, 1);
    tw_1.*.staon = @intFromBool((@as(ptrdiff_t, @intFromBool(!(staen != 0))) != 0) or (y != 0));
    tw_1.*.prev_b = null;
}
pub fn instw(arg_w: [*c]W, arg_b_1: [*c]B, arg_l: off_t, arg_n: off_t, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var b_1 = arg_b_1;
    _ = &b_1;
    var l = arg_l;
    _ = &l;
    var n = arg_n;
    _ = &n;
    var flg = arg_flg;
    _ = &flg;
    var bw_2: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_2;
    if (b_1 == bw_2.*.b) {
        bwins(bw_2, l, n, flg);
    }
}
pub fn deltw(arg_w: [*c]W, arg_b_1: [*c]B, arg_l: off_t, arg_n: off_t, arg_flg: c_int) callconv(.c) void {
    var w = arg_w;
    _ = &w;
    var b_1 = arg_b_1;
    _ = &b_1;
    var l = arg_l;
    _ = &l;
    var n = arg_n;
    _ = &n;
    var flg = arg_flg;
    _ = &flg;
    var bw_2: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_2;
    if (b_1 == bw_2.*.b) {
        bwdel(bw_2, l, n, flg);
    }
}
pub fn naborttw(arg_w: [*c]W, arg_k: c_int, arg_object: ?*anyopaque, arg_notify: [*c]c_int) callconv(.c) c_int {
    var w = arg_w;
    _ = &w;
    var k = arg_k;
    _ = &k;
    var object = arg_object;
    _ = &object;
    var notify = arg_notify;
    _ = &notify;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    if (notify != null) {
        notify.* = 1;
    }
    if ((k != -@as(c_int, 10)) and !(yncheck(yes_key, k) != 0)) return -@as(c_int, 1);
    if (bw_1.*.b.*.count == @as(c_int, 1)) {
        genexmsg(bw_1, 0, null);
    }
    return abortit(bw_1.*.parent, 0);
}
pub fn naborttw1(arg_w: [*c]W, arg_k: c_int, arg_object: ?*anyopaque, arg_notify: [*c]c_int) callconv(.c) c_int {
    var w = arg_w;
    _ = &w;
    var k = arg_k;
    _ = &k;
    var object = arg_object;
    _ = &object;
    var notify = arg_notify;
    _ = &notify;
    var bw_1: [*c]BW = @ptrCast(@alignCast(w.*.object));
    _ = &bw_1;
    if (notify != null) {
        notify.* = 1;
    }
    if ((k != -@as(c_int, 10)) and !(yncheck(yes_key, k) != 0)) return -@as(c_int, 1);
    if (!(exmsg != null)) {
        genexmsg(bw_1, 0, null);
    }
    return abortit(bw_1.*.parent, 0);
}
pub fn wpop(arg_bw_1: [*c]BW) callconv(.c) [*c]B {
    var bw_1 = arg_bw_1;
    _ = &bw_1;
    var b_2: [*c]B = undefined;
    _ = &b_2;
    var e: [*c]struct_bstack = bw_1.*.parent.*.bstack;
    _ = &e;
    b_2 = e.*.b;
    if (b_2.*.oldcur != null) {
        prm(b_2.*.oldcur);
    }
    if (b_2.*.oldtop != null) {
        prm(b_2.*.oldtop);
    }
    b_2.*.oldcur = e.*.cursor;
    b_2.*.oldtop = e.*.top;
    bw_1.*.parent.*.bstack = e.*.next;
    free(@ptrCast(@alignCast(e)));
    b_2.*.count -= 1;
    return b_2;
}
